[autopush] «The sheep died in the wool.»

--- a/lang_go/_gen/file_code.tmpl
+++ b/lang_go/_gen/file_code.tmpl
@@ -1,3 +1,4 @@
-package {{.GenType}}
+{{ .Lang.CommentLinePrefix }} {{ .GenTitle }} {{.GenVersion}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
+package {{.PkgName}}
 
 {{.FileContents}}
