--- a/lang_go/_gen/file_code.tmpl
+++ b/lang_go/_gen/file_code.tmpl
@@ -1,4 +1,4 @@
-{{ .Lang.CommentLinePrefix }} {{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
+// {{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
 package {{.PkgName}}
 
 {{.FileContents}}
