--- a/lang_go/_gen/file_pkg.tmpl
+++ b/lang_go/_gen/file_pkg.tmpl
@@ -1,4 +1,4 @@
 // {{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
 module {{.PkgName}}
 
-go {{index .Lang.Named "GoMod_GoVersion"}}
+go {{index .Lang.Dict "GoMod_GoVersion"}}
