[autopush] «How come we never talk anymore?»

--- a/lang_csharp/_gen/file_code.tmpl
+++ b/lang_csharp/_gen/file_code.tmpl
@@ -1,4 +1,4 @@
-// {{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
+/// <summary>{{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}</summary>
 namespace {{.PkgName}};
 
 {{.FileContents}}
