[autopush] «Paralysis through analysis.»

--- a/lang_go/_gen/types.tmpl
+++ b/lang_go/_gen/types.tmpl
@@ -1,7 +1,15 @@
+import "net/url"
+
+type DocumentURI string
+type URI string
+
+func (it DocumentURI) URL() (*url.URL, error) { return url.Parse(string(it)) }
+func (it URI) URL() (*url.URL, error) { return url.Parse(string(it)) }
+
 {{ range .Items }}
 {{- with $type := . }}
 
 {{- $type -}}
 
-{{- end }}
+{{- end -}}
 {{end}}
