--- a/lang_go/_gen/types_enumerations.tmpl
+++ b/lang_go/_gen/types_enumerations.tmpl
@@ -1,14 +1,14 @@
-{{ with $this := . }}
-{{ range .Items }}
-{{ with $enum := . }}
+{{- with $it := . }}
+{{- range .Items }}
+{{- with $enum := . }}
 
-{{ .DocComments $this }}
-type {{ $enum.Name }} {{ $enum.Type }}
+{{ .DocComments $it }}
+type {{ $enum.Name }} {{ $it.Type $enum.Type }}
 
-{{ range .Enumerants }}
-{{ .DocComments $this }}
+{{- range .Enumerants }}
+{{ .DocComments $it }}
 const {{ $enum.Name }}{{ .NameUp }} {{ $enum.Name }} = {{ .Value }}
-{{ end }}
+{{- end }}
 
 // String returns ""{{range .Enumerants}} or "{{.NameUp}}"{{end}}, depending on the value of `it`.
 func (it {{ $enum.Name }}) String() string {
@@ -21,6 +21,6 @@ func (it {{ $enum.Name }}) String() string {
 	return ""
 }
 
-{{ end }}
-{{ end }}
-{{ end }}
+{{- end }}
+{{- end }}
+{{- end }}
