--- a/lang_go/_gen/type_Structure.tmpl
+++ b/lang_go/_gen/type_Structure.tmpl
@@ -1,8 +1,8 @@
 {{- with $it := . -}}
 struct {
     {{ range $it.Type.Properties }}
-    {{ .DocComments $it.Dot }}
-    {{ .NameUp }} {{if .Optional}}*{{end}}{{ $it.Dot.Type .Type }}
+    {{ .DoDocComments $it.Dot }}
+    {{ .NameUp }} {{ $it.Dot.DoTypeOptional .Type .Optional }}
     {{ end }}
 }
 {{- end }}
