[autopush] «He who laughs last didn't get the joke.»

--- a/lang_go/_gen/types_structures.tmpl
+++ b/lang_go/_gen/types_structures.tmpl
@@ -6,7 +6,7 @@
 type {{ $struct.Name }} struct {
     {{ range .Properties }}
     {{ .DoDocComments $it }}
-    {{ .NameUp }} {{ $it.DoTypeOptional .Type .Optional }}
+    {{ .NameUp }} {{ $it.DoTypeOptional .Type ($it.If .HasConstVal false .Optional) }}
     {{ end }}
 }
 
