--- a/lang_go/_gen/type_Structure.tmpl
+++ b/lang_go/_gen/type_Structure.tmpl
@@ -2,7 +2,7 @@
 struct {
     {{ range $it.Type.Properties }}
     {{ .DoDocComments $it.Dot }}
-    {{ .NameUp }} {{ $it.Dot.DoTypeOptional .Type .Optional }}
+    {{ .NameUp }} {{ $it.Dot.DoTypeOptional .Type ($it.Dot.If .HasConstVal false .Optional) }}
     {{ end }}
 }
 {{- end }}
