--- a/lang_go/_gen/types.tmpl
+++ b/lang_go/_gen/types.tmpl
@@ -7,8 +7,9 @@ type URI string
 func (it URI) URL() (*url.URL, error) { return url.Parse(string(it)) }
 
 type String string
+func (it *String) IsNone() bool { return it == nil || *it == "" }
 func (it *String) IfNone(ifNone string) string {
-    if it == nil || *it == "" { return ifNone }
+    if it.IsNone() { return ifNone }
     return string(*it)
 }
 func (it *String) IfNil(ifNil string) string {
@@ -17,8 +18,9 @@ func (it *String) IfNil(ifNil string) string {
 }
 
 type Integer int
+func (it *Integer) IsNone() bool { return it == nil || *it == 0 }
 func (it *Integer) IfNone(ifNone int) int {
-    if it == nil || *it == 0 { return ifNone }
+    if it.IsNone() { return ifNone }
     return int(*it)
 }
 func (it *Integer) IfNil(ifNil int) int {
@@ -27,8 +29,9 @@ func (it *Integer) IfNil(ifNil int) int {
 }
 
 type Uinteger uint
+func (it *Uinteger) IsNone() bool { return it == nil || *it == 0 }
 func (it *Uinteger) IfNone(ifNone uint) uint {
-    if it == nil || *it == 0 { return ifNone }
+    if it.IsNone() { return ifNone }
     return uint(*it)
 }
 func (it *Uinteger) IfNil(ifNil uint) uint {
@@ -37,8 +40,9 @@ func (it *Uinteger) IfNil(ifNil uint) uint {
 }
 
 type Decimal float64
+func (it *Decimal) IsNone() bool { return it == nil || *it == 0.0 /*|| *it == math.SmallestNonzeroFloat64*/ }
 func (it *Decimal) IfNone(ifNone float64) float64 {
-    if it == nil || *it == 0.0 /*|| *it == math.SmallestNonzeroFloat64*/ { return ifNone }
+    if it.IsNone() { return ifNone }
     return float64(*it)
 }
 func (it *Decimal) IfNil(ifNil float64) float64 {
@@ -47,8 +51,9 @@ func (it *Decimal) IfNil(ifNil float64) float64 {
 }
 
 type Boolean bool
+func (it *Boolean) IsNone() bool { return it == nil || !(bool)(*it) }
 func (it *Boolean) IfNone(ifNone bool) bool {
-    if it == nil || !(*it) { return ifNone }
+    if it.IsNone() { return ifNone }
     return bool(*it)
 }
 func (it *Boolean) IfNil(ifNil bool) bool {
