--- a/lang_csharp/_gen/types.tmpl
+++ b/lang_csharp/_gen/types.tmpl
@@ -1,7 +1,5 @@
-{{ range .Items }}
-{{- with $type := . }}
-
-{{- $type -}}
-
-{{- end }}
-{{end}}
+{{- with $main := . -}}
+{{- range $main.Items -}}
+{{ . }}
+{{- end -}}
+{{- end -}}
