--- a/lang_csharp/_gen/types_structures.tmpl
+++ b/lang_csharp/_gen/types_structures.tmpl
@@ -1,19 +1,19 @@
 {{- with $main := . -}}
 {{- range .Items -}}
-{{- with $struct := . -}}
+{{- with $struct := . }}
 
-{{ .DoDocComments $main }}
+{{ .DoDocComments $main -}}
 public class {{ $struct.NameUp }} {
-/*    {{- range .Extends }}
-    {{ $main.DoType . }}
+    {{- range .Extends }}
+    public {{ $main.DoType . }} {{ $main.DoType . }}; //XTEND
     {{- end -}}
 
     {{- range .Mixins }}
-    {{ $main.DoType . }}
-    {{- end -}} */
+    public {{ $main.DoType . }} {{ $main.DoType . }}; //MIXIN
+    {{- end -}}
 
-    {{- range .Properties -}}
-    {{ .DoDocComments $main }}
+    {{- range .Properties }}
+    {{ .DoDocComments $main -}}
     public {{ $main.DoTypeOptional .Type ($main.If .HasConstVal false .Optional) }} {{ .NameUp }};
     {{- end }}
 }
