--- a/lang_csharp/_gen/type_Structure.tmpl
+++ b/lang_csharp/_gen/type_Structure.tmpl
@@ -1,5 +1,5 @@
 {{- with $bag := . -}}
-public class {{ $bag.IdentGen }} {
+/*TStruc*/public class {{ $bag.TypeIdentGen }} {
     {{ range $bag.Type.Properties -}}
     {{ .DoDocComments $bag.Main -}}
     public {{ $bag.Main.DoTypeOptional .Type ($bag.Main.If .HasConstVal false .Optional) }} {{ .NameUp }};
