--- a/lang_go/_gen/type_Structure.tmpl
+++ b/lang_go/_gen/type_Structure.tmpl
@@ -1,8 +1,8 @@
-{{- with $bag := . -}}
-struct {
+{{- $bag := . -}}
+
+/*TStruc*/ struct {
     {{- range $bag.Type.Properties -}}
     {{ .DoDocComments $bag.Main }}
     {{ .NameUp }} {{ $bag.Main.DoTypeOptional .Type ($bag.Main.If .HasConstVal false .Optional) }}
     {{- end -}}
 }
-{{- end }}
