--- a/lang_go/_gen/type_Tuple.tmpl
+++ b/lang_go/_gen/type_Tuple.tmpl
@@ -1,11 +1,8 @@
-{{- with $bag := . -}}
-{{- with $member_types := $bag.Type -}}
+{{- $bag := . -}}
+{{- $member_types := $bag.Type -}}
 
-struct {
+/*TTup*/ struct {
 {{- range $i, $mt := $member_types }}
     {{$mt.NameSuggestion true}}{{$i}} {{ $bag.Main.DoType $mt }}
 {{- end }}
 }
-
-{{- end -}}
-{{- end -}}
