--- a/lang_csharp/_gen/type_Tuple.tmpl
+++ b/lang_csharp/_gen/type_Tuple.tmpl
@@ -1,7 +1,7 @@
 {{- with $bag := . -}}
 {{- with $member_types := $bag.Type -}}
 
-public class {{ $bag.IdentGen }} {
+/*TTup*/public class {{ $bag.TypeIdentGen }} {
     {{- range $i, $mt := $member_types }}
     public {{ $bag.Main.DoType $mt }} {{$mt.NameSuggestion true}}{{$i}};
     {{- end -}}
