--- a/lang_go/_gen/type_Or.tmpl
+++ b/lang_go/_gen/type_Or.tmpl
@@ -1,15 +1,12 @@
-{{- with $bag := . -}}
-{{- with $member_types := $bag.Type.NonNull -}}
+{{- $bag := . -}}
+{{- $member_types := $bag.Type.NonNull -}}
 
 {{- if eq (len $member_types) 1 -}}
-{{ $bag.Main.DoTypeOptional (index $member_types 0) true }}
+/*TOr*/ {{ $bag.Main.DoTypeOptional (index $member_types 0) true }}
 {{- else -}}
-struct {
+/*TOr*/ struct {
 {{- range $member_types -}}
     {{.NameSuggestion true}} {{ $bag.Main.DoTypeOptional . true }}
 {{ end }}
 }
 {{- end }}
-
-{{- end -}}
-{{- end -}}
