--- a/lang_csharp/_gen/type_Or.tmpl
+++ b/lang_csharp/_gen/type_Or.tmpl
@@ -1,5 +1,5 @@
-{{- with $bag := . -}}
-{{- with $member_types := $bag.Type.NonNull -}}
+{{- $bag := . -}}
+{{- $member_types := $bag.Type.NonNull -}}
 
 {{- if eq (len $member_types) 1 -}}
 /*TOr1*/{{ $bag.Main.DoTypeOptional (index $member_types 0) true }}
@@ -13,6 +13,3 @@
 {{ end -}}
 }
 {{- end }}
-
-{{- end -}}
-{{- end -}}
