[autopush] «This fortune intentionally not included.»

--- a/lang_go/_gen/decls_structures.tmpl
+++ b/lang_go/_gen/decls_structures.tmpl
@@ -1,7 +1,7 @@
 {{- $main := . -}}
 
 {{- range .Decls -}}
-{{- $struct := . -}}
+{{- $struct := . }}
 
 {{ .DoDocComments $main }}
 type {{ $struct.NameUp }} struct {
